--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=ADMIN\\SQLEXPRESS;Initial Catalog=BTL_Web_NC;Integrated Security=True;TrustServerCertificate=True"
+    "DefaultConnection": "Data Source=MSI\\SQLEXPRESS;Initial Catalog=f4_shopN;Integrated Security=True;Trust Server Certificate=True"
   }
 }
